--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff6"
+    android:background="#060"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/card1"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/c_3_of_hearts"
         app:layout_constraintBottom_toBottomOf="parent"
